--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a class="nav-link" href="#layanan">Layanan</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../AdminLTE-3.2.0/index2.html">Booking</a>
+              <a class="nav-link" href="../projectkuuu/backend/index2.html">Booking</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#testimoni">Testimoni</a>
